samples/_failures_safe/1761391106_483fd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dc884ca.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_9dc884ca.c:147:13: error: expected declaration or statement at end of input
  147 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_9dc884ca.c:147:13: error: expected declaration or statement at end of input
